Applied some more suggestions by PMD.